openshift/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  creationTimestamp: null
  name: openshift-master
subsets:
- addresses:
  - ip: 127.0.0.1
  ports:
  - name: 8443-tcp
    port: 443
    protocol: TCP
