openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
  name: openshift-master
spec:
  ports:
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector: {}
status:
  loadBalancer: {}
