openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: openshift-master
spec:
  host: paas.pond-water.com
  port:
    targetPort: 8443
  to:
    kind: Service
    name: openshift-master
  tls:
    termination: passthrough
status:
  ingress: null
